changes by alex

--- a/index.1.html
+++ b/index.1.html
@@ -60,6 +60,7 @@
                         <li><a href="automatizacion.html">Automatización</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="projects.html#/{{lang_str}}">{{lang.menu9}}</a></li>
                     </ul>
                 </nav><!-- /.navbar collapse-->
             </div>
