--- a/403.html
+++ b/403.html
@@ -48,6 +48,7 @@
                         <li><a href="electro.html">Electrodo</a></li>
                         <li><a href="calor.html">Calor</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
+                        <li><a href="projects.html">Proyectos</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav><!-- /.navbar collapse-->
