--- a/palme.html
+++ b/palme.html
@@ -76,9 +76,9 @@
                         
                     </div>
                     <div class="language-bar">
-                        <a href="#" class="active"><img src="assets/img/flags/gb.png" alt=""></a>
-                        <a href="#"><img src="assets/img/flags/de.png" alt=""></a>
-                        <a href="#"><img src="assets/img/flags/es.png" alt=""></a>
+                        <a href="#/es" class="active">Español</a>
+                        <a href="#/de">Deuch</a>
+                        <a href="#"></a>
                     </div>
                 </div>
                 <nav class="collapse navbar-collapse bs-navbar-collapse navbar-left" role="navigation">
@@ -91,6 +91,9 @@
                         <li><a href="automatizacion.html">Automatización</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="projects.html#/{{lang_str}}">{{lang.menu9}}</a></li>
+                        <li><a href="seguridad.html#/{{lang_str}}">{{lang.menu10}}</a></li>
+                        <li><a href="proveedores.html#/{{lang_str}}">{{lang.menu11}}</a></li>
                     </ul>
                 </nav><!-- /.navbar collapse-->
             </div>
